[package]
name = "my_rust_os"
version = "0.1.0"
edition = "2021"

[dependencies]
uart_16550 = "0.3.0"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bootloader = "0.9.23"
x86_64 = "0.14.10"

[lib]
test = false

[package.metadata.bootimage]
# Humne debug flags hata diye hain, ab terminal clean rahega!
run-args = ["-serial", "stdio"]